2023-01-12 JTC: Fixes the input length of the DApp's Wrap page on mobile.

--- a/public/css/dapp-delegate.css
+++ b/public/css/dapp-delegate.css
@@ -193,7 +193,7 @@
 }
 
 @media only screen and (min-width: 0px) and (max-width: 480px) {
-    .amount {
+    .amount-delegate {
         width: 15% !important;
     }
 
@@ -228,7 +228,7 @@
 }
 
 @media only screen and (min-width: 481px) and (max-width: 767px) {
-    .amount {
+    .amount-delegate {
         width: 15% !important;
     }
 
@@ -273,7 +273,7 @@
         margin: 10px 0 0;
     }
 
-    .amount {
+    .amount-delegate {
         width: 15% !important;
     }
 
